--- a/style/main.css
+++ b/style/main.css
@@ -6,5 +6,51 @@ main{
     width: 50%;
 }
 .left{
+    display: flex;
+    justify-content: center;
     width: 50%;
+}
+*{
+    margin: 0;
+}
+.main-block {
+    width: 50%;
+}
+.main-block>h1{
+    font-size: 50px;
+    margin-top: 50px;
+}
+.main-block>p{
+    opacity: 0.7;
+    font-size: 19px;
+    margin-top: 50px;
+    margin-bottom: 50px;
+}
+.findBut{
+    height: 100%; 
+    position: absolute;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 10%;
+}
+.findBut>img{
+    height: 80%;
+}
+.container-input{
+    display: flex;
+    height: 15%;
+    align-items: center;
+    width: 100%;
+    position: relative;
+    background-color: #283036;
+    
+}
+.input{
+    width: 100%;
+    height: 100%;
+    background-color: #20242c;
+    border: 1px solid #1d1f22;
+    border-radius: 10px;
+    padding: 0px 20px 0px 50px;
 }
