--- a/style/main.css
+++ b/style/main.css
@@ -32,10 +32,10 @@ main{
     display: flex;
     justify-content: center;
     align-items: center;
-    width: 10%;
+    width: 13%;
 }
 .findBut>img{
-    height: 80%;
+    height: 40%;
 }
 .container-input{
     display: flex;
@@ -43,14 +43,14 @@ main{
     align-items: center;
     width: 100%;
     position: relative;
-    background-color: #283036;
-    
+    background-color: #20242c;
 }
 .input{
     width: 100%;
     height: 100%;
-    background-color: #20242c;
-    border: 1px solid #1d1f22;
+    background-color: #283036;
+    border: 1.5px solid;
+    border-image-source: linear-gradient(90.89deg, rgba(255, 255, 255, 0.1) -1.67%, rgba(255, 255, 255, 0) 103.73%);
     border-radius: 10px;
     padding: 0px 20px 0px 50px;
 }
