--- a/style/main.css
+++ b/style/main.css
@@ -1,6 +1,7 @@
 main{
     width: 100%;
     display: flex;
+    font-family: Poppins;
 }
 .left{
     width: 50%;
@@ -10,19 +11,33 @@ main{
     justify-content: center;
     width: 50%;
 }
+.right{
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+    margin-top: 50px;
+    width: 50%;
+    margin-right: 20px;
+}
 *{
     margin: 0;
 }
 .main-block {
     width: 50%;
+    margin-top: 60px;
+    height: 480px;
 }
-.main-block>h1{
-    font-size: 50px;
+.main-block>h1 {
+    font-size: 42px;
     margin-top: 50px;
+    color: white;
+
 }
+
+
 .main-block>p{
     opacity: 0.7;
-    font-size: 19px;
+    font-size: 18px;
     margin-top: 50px;
     margin-bottom: 50px;
 }
@@ -36,10 +51,11 @@ main{
 }
 .findBut>img{
     height: 40%;
+    cursor: pointer;
 }
 .container-input{
     display: flex;
-    height: 15%;
+    height: 10%;
     align-items: center;
     width: 100%;
     position: relative;
@@ -53,4 +69,14 @@ main{
     border-image-source: linear-gradient(90.89deg, rgba(255, 255, 255, 0.1) -1.67%, rgba(255, 255, 255, 0) 103.73%);
     border-radius: 10px;
     padding: 0px 20px 0px 50px;
+    outline: none;
+}
+.button{
+    position: absolute;
+    right: 10px;
+    background-color: #FF6E30;
+    text-decoration: none;
+    color: white;
+    padding: 10px 25px 10px 25px;
+    border-radius: 5px;
 }
