--- a/style/main.css
+++ b/style/main.css
@@ -10,6 +10,9 @@ main{
     display: flex;
     justify-content: center;
     width: 50%;
+    flex-direction: column;
+    align-items: center;
+    gap: 30px;
 }
 .right{
     display: flex;
@@ -17,10 +20,11 @@ main{
     align-items: center;
     margin-top: 50px;
     width: 50%;
-    margin-right: 20px;
+    
 }
 *{
     margin: 0;
+    text-decoration: none;
 }
 .main-block {
     width: 50%;
@@ -54,7 +58,7 @@ main{
 }
 .container-input{
     display: flex;
-    height: 10%;
+    height: 12%;
     align-items: center;
     width: 100%;
     position: relative;
@@ -76,6 +80,13 @@ main{
     background-color: #FF6E30;
     text-decoration: none;
     color: white;
-    padding: 10px 25px 10px 25px;
+    padding: 8px 35px 8px 35px;
     border-radius: 5px;
+}
+.under-block{
+    width: 30%;
+    margin-right: 200px;
+}
+.under-block>a>img{
+    width: 20%;
 }
